bump: version 2.4.1 → 2.4.2